# video_segment_exporter

./: CMakeLists.txt  README.md  build.sh  gif.h  main.cpp  segment_selector.h  video_player.cpp  video_player.h
.github/: FUNDING.yml
.github/workflows/: cmake-multi-platform.yml
src/: gif.cpp  segment_selector.cpp
